# tree-sitter-luau

./: .gitignore  .grammar.js.swp  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  compile_flags.txt  example-file  go.mod  grammar.js  package-lock.json  package-old.json  package.json  pyproject.toml  setup.py  test.lua  test.luau  tree-sitter-luau.wasm  tree-sitter.json
_archive/nvim-queries/: locals.scm
_archive/scripts/: stage_nvim_queries.ps1
bindings/c/: tree-sitter-luau.h  tree-sitter-luau.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_luau/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLuauTests/: TreeSitterLuauTests.swift
corpus/: statements.txt
helix-queries/: highlights.scm  indents.scm  locals.scm  textobjects.scm
nvim-queries/: highlights.scm  indents.scm  locals.scm
queries/: highlights.scm  indent.scm  locals.scm
scripts/: clean.ps1  clone_helix_queries.ps1  clone_queries.ps1  stage-helix-queries.ps1  stage_nvim_queries.ps1  test_output_as_file.ps1
src/: grammar.json  luauts_pcg_hash_table.h  node-types.json  parser.c  scanner.c
test/corpus/: assignment.txt  blocks.txt  expressions.txt  functions.txt  type_annotations.txt
